adjusted date location

--- a/TechSupport2/TechSupport/View/Report2.rdlc
+++ b/TechSupport2/TechSupport/View/Report2.rdlc
@@ -520,7 +520,9 @@
                                         </Style>
                                       </TextRun>
                                     </TextRuns>
-                                    <Style />
+                                    <Style>
+                                      <TextAlign>Center</TextAlign>
+                                    </Style>
                                   </Paragraph>
                                 </Paragraphs>
                                 <rd:DefaultName>DateOpened</rd:DefaultName>
@@ -536,6 +538,7 @@
                                   <PaddingBottom>2pt</PaddingBottom>
                                 </Style>
                               </Textbox>
+                              <rd:Selected>true</rd:Selected>
                             </CellContents>
                           </TablixHeader>
                           <TablixMembers>
